temp/onboarding_retrieve/dev/objects/Lead/fields/F3_Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>F3_Nacionalidad__c</fullName>
    <label>Nacionalidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AF</fullName>
                <label>Afgana</label>
            </value>
            <value>
                <fullName>AX</fullName>
                <label>Alandés</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>Albanesa</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>Alemana</label>
            </value>
            <value>
                <fullName>AD</fullName>
                <label>Andorrana</label>
            </value>
            <value>
                <fullName>AO</fullName>
                <label>Angoleña</label>
            </value>
            <value>
                <fullName>AQ</fullName>
                <label>Antártida</label>
            </value>
            <value>
                <fullName>DZ</fullName>
                <label>Argelina</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>Armenia</label>
            </value>
            <value>
                <fullName>AW</fullName>
                <label>Arubeña</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Australiana AU</label>
            </value>
            <value>
                <fullName>CC</fullName>
                <label>Australiana CC</label>
            </value>
            <value>
                <fullName>CX</fullName>
                <label>Australiana CX</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Austríaca</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>Azerbaiyana</label>
            </value>
            <value>
                <fullName>BS</fullName>
                <label>Bahameña</label>
            </value>
            <value>
                <fullName>BH</fullName>
                <label>Bahriní</label>
            </value>
            <value>
                <fullName>BB</fullName>
                <label>Barbadense</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Belga</label>
            </value>
            <value>
                <fullName>BZ</fullName>
                <label>Beliceña</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>Bengalí</label>
            </value>
            <value>
                <fullName>BJ</fullName>
                <label>Beninesa</label>
            </value>
            <value>
                <fullName>BM</fullName>
                <label>Bermudeña</label>
            </value>
            <value>
                <fullName>BY</fullName>
                <label>Bielorrusa</label>
            </value>
            <value>
                <fullName>MM</fullName>
                <label>Birmana</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>Boliviana</label>
            </value>
            <value>
                <fullName>BA</fullName>
                <label>Bosnio</label>
            </value>
            <value>
                <fullName>BW</fullName>
                <label>Botsuanesa</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <label>Brasileña</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>