temp/onboarding_retrieve/dev/objects/Lead/fields/F3_No_Poliza_Seguros__c.field-meta.xml
<CustomField>
    <fullName>F3_No_Poliza_Seguros__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>No. de Póliza de Seguros</label>
    <length>255</length>
    <type>Text</type>
</CustomField>