temp/onboarding_retrieve/dev/objects/Lead/fields/F3_Region__c.field-meta.xml
<CustomField>
    <fullName>F3_Region__c</fullName>
    <formula>Owner:User.F3_Region__c</formula>
    <label>Región</label>
    <type>Text</type>
</CustomField>