temp/onboarding_retrieve/dev/objects/Lead/fields/F3_Se_completaron_campos_minimos__c.field-meta.xml
<CustomField>
    <fullName>F3_Se_completaron_campos_minimos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Se completaron campos mínimos?</label>
    <type>Checkbox</type>
</CustomField>