temp/onboarding_retrieve/dev/objects/Lead/fields/F3_Sucursal__c.field-meta.xml
<CustomField>
    <fullName>F3_Sucursal__c</fullName>
    <formula>Owner:User.F3_Sucursal__c</formula>
    <label>Sucursal</label>
    <type>Text</type>
</CustomField>