temp/onboarding_retrieve/dev/objects/Lead/fields/F3_Tipo_Banca__c.field-meta.xml
<CustomField>
    <fullName>F3_Tipo_Banca__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <label>Tipo Banca</label>
    <type>Text</type>
</CustomField>