temp/onboarding_retrieve/dev/objects/Lead/fields/Fecha_Cerrada_Perdida__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cerrada_Perdida__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Cerrada Perdida</label>
    <type>DateTime</type>
</CustomField>