temp/onboarding_retrieve/dev/objects/Lead/fields/Fecha_Convertido__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Convertido__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Convertido</label>
    <type>DateTime</type>
</CustomField>