temp/onboarding_retrieve/dev/objects/Lead/fields/Fecha_de_Nacimiento_Prospecto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Nacimiento_Prospecto__c</fullName>
    <description>Fecha de nacimiento utilizada para el alta de un lead / prospecto</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Fecha de nacimiento del prospecto / lead</inlineHelpText>
    <label>Fecha de Nacimiento Prospecto</label>
    <type>Date</type>
</CustomField>