temp/onboarding_retrieve/dev/objects/Lead/fields/Fecha_de_seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_seguimiento__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de seguimiento</label>
    <type>Date</type>
</CustomField>