temp/onboarding_retrieve/dev/objects/Lead/fields/Fecha_probable_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Fecha_probable_de_cierre__c</fullName>
    <description>Requerimiento banca privada, solicitado el 5 de diciembre 2022.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha probable de cierre</label>
    <type>Date</type>
</CustomField>