temp/onboarding_retrieve/dev/objects/Lead/fields/Fecha_Recalendarizada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Recalendarizada__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Recalendarizada</label>
    <type>DateTime</type>
</CustomField>