temp/onboarding_retrieve/dev/objects/Lead/fields/FinServ__CreatedByMe__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CreatedByMe__c</fullName>
    <formula>IF(  FinServ__ReferredByUser__c = $User.Id,True,False)</formula>
    <label>Created By Me</label>
    <type>Checkbox</type>
</CustomField>