temp/onboarding_retrieve/dev/objects/Lead/fields/FinServ__Household__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Household that this Referral rolls up to.</description>
    <label>Household</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Household</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Household Referrals</relationshipLabel>
    <relationshipName>HouseholdReferrals</relationshipName>
    <type>Lookup</type>
</CustomField>