temp/onboarding_retrieve/dev/objects/Lead/fields/FirstNameB__c.field-meta.xml
<CustomField>
    <fullName>FirstNameB__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Nombre Beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>