temp/onboarding_retrieve/dev/objects/Lead/fields/FWY_Actividad_registrada__c.field-meta.xml
<CustomField>
    <fullName>FWY_Actividad_registrada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo bandera que se actualiza cuando existe una actividad relacionada al prospecto</description>
    <label>Actividad registrada</label>
    <type>Checkbox</type>
</CustomField>