temp/onboarding_retrieve/dev/objects/Lead/fields/GAUSERID__c.field-meta.xml
<CustomField>
    <fullName>GAUSERID__c</fullName>
    <description>Creación de Campo Gclid para integración con google analitics, solicitado por marketing coporativo 09062022</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>GACLIENTID__c para integración con google analitics</inlineHelpText>
    <label>GAUSERID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>