temp/onboarding_retrieve/dev/objects/Lead/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>Habilitación de campo para Google Ads</description>
    <encryptionScheme>None</encryptionScheme>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>