temp/onboarding_retrieve/dev/objects/Lead/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <label>Género</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Masculino</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Femenino</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>