temp/onboarding_retrieve/dev/objects/Lead/fields/GEO__c.field-meta.xml
<CustomField>
    <fullName>GEO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GEO</label>
    <type>TextArea</type>
</CustomField>