temp/onboarding_retrieve/dev/objects/Lead/fields/Historial_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Historial_Marketing__c</fullName>
    <description>Requerimiento oprtunidades (Leads) 22 Marzo 2023</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Historial Marketing</label>
    <type>TextArea</type>
</CustomField>