temp/onboarding_retrieve/dev/objects/Lead/fields/HomeOwnership__c.field-meta.xml
<CustomField>
    <fullName>HomeOwnership__c</fullName>
    <description>The ownership status of the referred individual&apos;s primary residence</description>
    <formula>TEXT(FinServ__RelatedAccount__r.FinServ__HomeOwnership__pc)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Ownership</label>
    <type>Text</type>
</CustomField>