temp/onboarding_retrieve/dev/objects/Lead/fields/Horas_Asignada_Cerrada_Perdida__c.field-meta.xml
<CustomField>
    <fullName>Horas_Asignada_Cerrada_Perdida__c</fullName>
    <formula>(Fecha_Cerrada_Perdida__c - Fecha_Asignado__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas entre Asignada Cerrada Perdida</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>