temp/onboarding_retrieve/dev/objects/Lead/fields/HorasAsignadoCerradaGanada__c.field-meta.xml
<CustomField>
    <fullName>HorasAsignadoCerradaGanada__c</fullName>
    <formula>(Fecha_Cerrada_Ganada__c - Fecha_Asignado__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas entre Asignado Cerrada Ganada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>