temp/onboarding_retrieve/dev/objects/Lead/fields/ID_extr__c.field-meta.xml
<CustomField>
    <fullName>ID_extr__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID extranjero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>