temp/onboarding_retrieve/dev/objects/Lead/fields/Id_registro__c.field-meta.xml
<CustomField>
    <fullName>Id_registro__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Id_registro</label>
    <length>250</length>
    <type>Text</type>
</CustomField>