temp/onboarding_retrieve/dev/objects/Lead/fields/IDMunicipio__c.field-meta.xml
<CustomField>
    <fullName>IDMunicipio__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>municipalityID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>