temp/onboarding_retrieve/dev/objects/Lead/fields/INE_bancas__c.field-meta.xml
<CustomField>
    <fullName>INE_bancas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INE</label>
    <type>Checkbox</type>
</CustomField>