temp/onboarding_retrieve/dev/objects/Lead/fields/Inversi_n_cetes__c.field-meta.xml
<CustomField>
    <fullName>Inversi_n_cetes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inversión cetes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>