temp/onboarding_retrieve/dev/objects/Lead/fields/LastNameB__c.field-meta.xml
<CustomField>
    <fullName>LastNameB__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Apellido Paterno Beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>