temp/onboarding_retrieve/dev/objects/Lead/fields/LengthOfRelationship__c.field-meta.xml
<CustomField>
    <fullName>LengthOfRelationship__c</fullName>
    <description>How long the referred individual has been with your company</description>
    <formula>FinServ__RelatedAccount__r.FinServ__LengthOfRelationship__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>