temp/onboarding_retrieve/dev/objects/Lead/fields/Lider_de_asesor__c.field-meta.xml
<CustomField>
    <fullName>Lider_de_asesor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Líder de asesor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>