temp/onboarding_retrieve/dev/objects/Lead/fields/ListoIntegrarConSAP__c.field-meta.xml
<CustomField>
    <fullName>ListoIntegrarConSAP__c</fullName>
    <formula>IF(OR( 
     ISBLANK(FirstName)
    ,ISBLANK(LastName)
    ,ISBLANK(Suffix)
    ,ISPICKVAL(Gender__c,&quot;&quot;)
    ,ISBLANK(F3_CURP__c)
    ,ISPICKVAL(F3_Nacionalidad__c,&quot;&quot;)
    ,ISBLANK(Fecha_Nacimiento_Prospecto__c)
    ,ISBLANK(F3_RFC__c)
    ,ISPICKVAL(Tipo_de_Persona__c,&quot;&quot;)
    ,ISPICKVAL(Clasificacion_Persona__c,&quot;&quot;)
    ,ISPICKVAL(F3_Estado_Civil__c,&quot;&quot;)
    ,ISBLANK(MobilePhone)
    ,ISBLANK(Email)
    ,ISPICKVAL(Pais_Nacimiento__c,&quot;&quot;)
    ,ISPICKVAL(Estado_Nacimiento__c,&quot;&quot;)
   ), false, true)</formula>
    <label>Listo para integrar con SAP</label>
    <type>Checkbox</type>
</CustomField>