temp/onboarding_retrieve/dev/objects/Lead/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <formula>CASE( CEILING(MONTH(FechaEstimadaDeCierre__c) / 3),
    1, &quot;Primer Q&quot;,
    2, &quot;Segundo Q&quot;,
    3, &quot;Tercer Q&quot;,
    4, &quot;Cuarto Q&quot;,
    &quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mes</label>
    <type>Text</type>
</CustomField>