temp/onboarding_retrieve/dev/objects/Lead/fields/Miembro_de_l_nea_de_acci_n__c.field-meta.xml
<CustomField>
    <fullName>Miembro_de_l_nea_de_acci_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para relación del miembro de línea de acción</description>
    <label>Miembro de línea de acción</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Prospectos (Miembro de línea de acción)</relationshipLabel>
    <relationshipName>Prospectos</relationshipName>
    <type>Lookup</type>
</CustomField>