temp/onboarding_retrieve/dev/objects/Lead/fields/Minutos_entre_Asignado_y_Cerrada_Ganada__c.field-meta.xml
<CustomField>
    <fullName>Minutos_entre_Asignado_y_Cerrada_Ganada__c</fullName>
    <formula>(Fecha_Cerrada_Ganada__c - Fecha_Asignado__c) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutos entre Asignado y Cerrada Ganada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>