temp/onboarding_retrieve/dev/objects/Lead/fields/MinutosentreAsignadoyRecalendarizada__c.field-meta.xml
<CustomField>
    <fullName>MinutosentreAsignadoyRecalendarizada__c</fullName>
    <formula>(Fecha_Recalendarizada__c - Fecha_Asignado__c) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutos entre Asignado y Recalendarizada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>