temp/onboarding_retrieve/dev/objects/Lead/fields/Monto_Alterna_ES__c.field-meta.xml
<CustomField>
    <fullName>Monto_Alterna_ES__c</fullName>
    <description>Requerimiento Actinver, 4 de Enero 2023</description>
    <label>Monto Alterna ES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>