temp/onboarding_retrieve/dev/objects/Lead/fields/Monto_Minimo_Requerido__c.field-meta.xml
<CustomField>
    <fullName>Monto_Minimo_Requerido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monto Mínimo Requerido</label>
    <type>Checkbox</type>
</CustomField>