temp/onboarding_retrieve/dev/objects/Lead/fields/MontoEstimadoDeInversion__c.field-meta.xml
<CustomField>
    <fullName>MontoEstimadoDeInversion__c</fullName>
    <label>Monto estimado de inversión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>