temp/onboarding_retrieve/dev/objects/Lead/fields/MostUsedChannel__c.field-meta.xml
<CustomField>
    <fullName>MostUsedChannel__c</fullName>
    <description>The communication channel that the referred individual uses most frequently</description>
    <formula>TEXT(FinServ__RelatedAccount__r.FinServ__MostUsedChannel__pc)</formula>
    <label>Most Used Channel</label>
    <type>Text</type>
</CustomField>