temp/onboarding_retrieve/dev/objects/Lead/fields/Motivo_Convertido__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Convertido__c</fullName>
    <label>Motivo Convertido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Negocio Abierto</fullName>
                <default>true</default>
                <label>Negocio Abierto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>