temp/onboarding_retrieve/dev/objects/Lead/fields/Motivo_No_Contactado__c.field-meta.xml
<CustomField>
    <fullName>Motivo_No_Contactado__c</fullName>
    <label>Motivo No Contactado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Número de teléfono erróneo o incompleto</fullName>
            </value>
            <value>
                <fullName>No enlaza llamada o sin/fuera de servicio</fullName>
            </value>
            <value>
                <fullName>Llamada desviada o direcciona a buzón de voz</fullName>
            </value>
            <value>
                <fullName>Contesta y cuelga</fullName>
            </value>
            <value>
                <fullName>Email inexistente</fullName>
            </value>
            <value>
                <fullName>Canal de contacto bloqueado</fullName>
            </value>
            <value>
                <fullName>No responde (mensaje |whatsapp | llamada | email)</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Fallo o no entregado</fullName>
                <isActive>false</isActive>
                <label>Fallo o no entregado</label>
            </value>
            <value>
                <fullName>Intento Contacto</fullName>
                <isActive>false</isActive>
                <label>Intento Contacto</label>
            </value>
            <value>
                <fullName>No respondió</fullName>
                <isActive>false</isActive>
                <label>No respondió</label>
            </value>
            <value>
                <fullName>Se intento contactar</fullName>
                <isActive>false</isActive>
                <label>Se intentó contactar</label>
            </value>
            <value>
                <fullName>Sin Respuesta</fullName>
                <isActive>false</isActive>
                <label>Sin Respuesta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>