temp/onboarding_retrieve/dev/objects/Lead/fields/New_Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Asset_Value__c</fullName>
    <description>Requerimiento banca privada, solicitado el 5 de diciembre 2022.</description>
    <label>New Asset Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>