temp/onboarding_retrieve/dev/objects/Lead/fields/NombreProspecto__c.field-meta.xml
<CustomField>
    <fullName>NombreProspecto__c</fullName>
    <formula>LastName</formula>
    <label>Nombre del prospecto</label>
    <type>Text</type>
</CustomField>