temp/onboarding_retrieve/dev/objects/Lead/fields/Num_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Num_Exterior__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>externalNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>