temp/onboarding_retrieve/dev/objects/Lead/fields/NumeroNominaPropietario__c.field-meta.xml
<CustomField>
    <fullName>NumeroNominaPropietario__c</fullName>
    <formula>Owner:User.ID_ASESOR__c</formula>
    <label>Número de nomina propietario</label>
    <type>Text</type>
</CustomField>