temp/onboarding_retrieve/dev/objects/Lead/fields/Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Objetivo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Objetivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>