temp/onboarding_retrieve/dev/objects/Lead/fields/OCR__c.field-meta.xml
<CustomField>
    <fullName>OCR__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OCR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>