temp/onboarding_retrieve/dev/objects/Lead/fields/Ocupacion__c.field-meta.xml
<CustomField>
    <fullName>Ocupacion__c</fullName>
    <description>Clasificación de persona</description>
    <label>Ocupación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Empleado</fullName>
            </value>
            <value>
                <fullName>Profesionista Independiente</fullName>
            </value>
            <value>
                <fullName>Sin Actividad Económica</fullName>
            </value>
            <value>
                <fullName>Actividad Empresarial</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>No Aplica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>