temp/onboarding_retrieve/dev/objects/Lead/fields/OportunidadDeProspecto__c.field-meta.xml
<CustomField>
    <fullName>OportunidadDeProspecto__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo para saber que la oportunidad viene del prospecto cuando se crea y se convierta a cliente</description>
    <label>Oportunidad de prospecto</label>
    <type>Checkbox</type>
</CustomField>