temp/onboarding_retrieve/dev/objects/Lead/fields/Otras_Opciones__c.field-meta.xml
<CustomField>
    <fullName>Otras_Opciones__c</fullName>
    <label>Otras Opciones</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motivo_No_Convertido__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Créditos</fullName>
            </value>
            <value>
                <fullName>Préstamos</fullName>
            </value>
            <value>
                <fullName>TCC</fullName>
            </value>
            <value>
                <fullName>Afore</fullName>
            </value>
            <value>
                <fullName>Apoyos gubernamentales</fullName>
            </value>
            <value>
                <fullName>Becas</fullName>
            </value>
            <value>
                <fullName>Bienes inmuebles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>