temp/onboarding_retrieve/dev/objects/Lead/fields/Pagina_origen__c.field-meta.xml
<CustomField>
    <fullName>Pagina_origen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Página origen</label>
    <length>250</length>
    <type>Text</type>
</CustomField>