temp/onboarding_retrieve/dev/objects/Lead/fields/Pasaporte__c.field-meta.xml
<CustomField>
    <fullName>Pasaporte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pasaporte</label>
    <type>Checkbox</type>
</CustomField>