temp/onboarding_retrieve/dev/objects/Lead/fields/Patrim_FechaCreacionProspecto__c.field-meta.xml
<CustomField>
    <fullName>Patrim_FechaCreacionProspecto__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de creación del prospecto</label>
    <type>DateTime</type>
</CustomField>