temp/onboarding_retrieve/dev/objects/Lead/fields/PCB__c.field-meta.xml
<CustomField>
    <fullName>PCB__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Código Postal Beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>