temp/onboarding_retrieve/dev/objects/Lead/fields/Prioridad__c.field-meta.xml
<CustomField>
    <fullName>Prioridad__c</fullName>
    <description>Campo para definir la prioridad del prospecto en Welath management</description>
    <label>Prioridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baja</fullName>
                <default>true</default>
                <label>Baja</label>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>