temp/onboarding_retrieve/dev/objects/Lead/fields/Productos_ofertados__c.field-meta.xml
<CustomField>
    <fullName>Productos_ofertados__c</fullName>
    <label>Productos ofertados</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Unidad_de_Negocio__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FONDOS DE INVERSIÓN</fullName>
            </value>
            <value>
                <fullName>BE , TDD , CHEQUERA</fullName>
            </value>
            <value>
                <fullName>MERCADO DINERO , CAPITALES, DERIVADOS</fullName>
            </value>
            <value>
                <fullName>CAMBIOS</fullName>
            </value>
            <value>
                <fullName>CREDITO</fullName>
            </value>
            <value>
                <fullName>SEGURO</fullName>
            </value>
            <value>
                <fullName>FIDEICOMISO</fullName>
            </value>
            <value>
                <fullName>ARRENDAMIENTO</fullName>
            </value>
            <value>
                <fullName>PRODCUTOS EXTRANJERO</fullName>
            </value>
            <value>
                <fullName>Auto</fullName>
            </value>
            <value>
                <fullName>Dotales</fullName>
            </value>
            <value>
                <fullName>GMM</fullName>
            </value>
            <value>
                <fullName>Hogar</fullName>
            </value>
            <value>
                <fullName>Seguro Viaje</fullName>
            </value>
            <value>
                <fullName>Vida</fullName>
            </value>
            <value>
                <fullName>Seguro PyME</fullName>
            </value>
            <value>
                <fullName>Empresarial</fullName>
            </value>
            <value>
                <fullName>01</fullName>
                <label>CONTRATO MARCO DE PRODUCTOS Y SERVICIOS BANCARIOS MÚLTIPLES</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>CONTRATO DE MEDIACIÓN MERCANTIL PARA LA DISTRIBUCIÓN INTEGRAL DE ACCIONES DE SOCIEDADES DE INVERSIÓN Y PARA LA ADMINISTRACIÓN DE UN PLAN PERSONAL DE RETIRO</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>CONTRATO DE MEDIACIÓN MERCANTIL PARA LA DISTRIBUCIÓN INTEGRAL DE ACCIONES DE SOCIEDADES DE INVERSIÓN Y PARA LA ADMINISTRACIÓN DE UNA CUENTA PERSONAL PARA EL AHORRO</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>CONTRATO MARCO DE COMPRAVENTA DE DIVISAS (BANCO)</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>CONTRATO DE DEPÓSITOS BANCARIOS DE DINERO A LA VISTA PARA EL PÚBLICO EN GENERAL (CUENTA BÁSICA ACTINVER)</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>CONTRATO DE DEPÓSITOS BANCARIOS DE DINERO A LA VISTA PARA EL PÚBLICO EN GENERAL (CUENTA BÁSICA DE NÓMINA ACTINVER)</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>TRADICIONAL DE INTERMEDIACIÓN BURSÁTIL</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>PLAN PERSONAL DE RETIRO</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>CONTRATO CUENTA LÍQUIDA ACTINVER</label>
            </value>
            <value>
                <fullName>BLINDAJE PATRIMONIAL</fullName>
                <isActive>false</isActive>
                <label>Blindaje Patrimonial</label>
            </value>
            <value>
                <fullName>PREVICANCER</fullName>
                <isActive>false</isActive>
                <label>PREVICANCER</label>
            </value>
            <value>
                <fullName>PRODUCTOS EXTRANJERO</fullName>
                <isActive>false</isActive>
                <label>PRODUCTOS EXTRANJERO</label>
            </value>
            <value>
                <fullName>Plan personal de retiro</fullName>
                <isActive>false</isActive>
                <label>Plan Personal de Retiro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>