temp/onboarding_retrieve/dev/objects/Lead/fields/ProductosOfertadosPM__c.field-meta.xml
<CustomField>
    <fullName>ProductosOfertadosPM__c</fullName>
    <label>Productos Ofertados PM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previsión Social</fullName>
            </value>
            <value>
                <fullName>Plan de Pensiones</fullName>
            </value>
            <value>
                <fullName>Caja de ahorro</fullName>
            </value>
            <value>
                <fullName>Fondo de ahorro</fullName>
            </value>
            <value>
                <fullName>Seguros empresariales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>