temp/onboarding_retrieve/dev/objects/Lead/fields/Profesion_esp__c.field-meta.xml
<CustomField>
    <fullName>Profesion_esp__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Profesión específica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>